# providence

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  REVIEW.md  docker-compose.yml  pyproject.toml  requirements.txt
config/: agents.yaml  watchlist.yaml
providence/: __init__.py  __main__.py  exceptions.py  factory.py
providence/agents/: base.py
providence/config/: agent_config.py  settings.py  watchlist.py
providence/infra/: __init__.py  alpaca_client.py  edgar_client.py  fred_client.py  llm_client.py  polygon_client.py
providence/orchestration/: __init__.py  models.py  orchestrator.py  runner.py  stage.py
providence/portfolio/: __init__.py  order_manager.py  tracker.py
providence/prompts/: cognit_crosssec_v1.0.yaml  cognit_event_v1.0.yaml  cognit_fundamental_v1.0.yaml  cognit_fundamental_v1.1.yaml  cognit_macro_v1.0.yaml  cognit_narrative_v1.0.yaml  decide_synth_v1.0.yaml  regime_narr_v1.0.yaml
providence/schemas/: __init__.py  belief.py  decision.py  enums.py  execution.py  exit.py  governance.py  learning.py  market_state.py  payloads.py  regime.py
providence/services/: __init__.py  context_svc.py  execution_service.py  health.py  perception_scheduler.py
providence/storage/: __init__.py  belief_store.py  fragment_store.py  run_store.py
providence/utils/: __init__.py  hashing.py  logging.py  redaction.py  tokens.py
scripts/: health_check.py
tests/: conftest.py
tests/fixtures/: __init__.py  edgar_responses.py  fred_responses.py  llm_responses.py  news_responses.py  options_responses.py  polygon_responses.py  sample_beliefs.py  (+1 more)
(+99 files in other folders)
