[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "providence"
version = "0.1.0"
description = "AI-Native Hedge Fund - Autonomous Investment System"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0",
    "structlog>=23.0",
    "httpx>=0.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.setuptools.packages.find]
include = ["providence*"]
